
## [Unreleased]
### Added
- f0.rosenbrockn Rosenbrock of N parameters for variadic input
- f1.rosenbrockn Rosenbrock of N parameters for vectors
- f0.cigar Cigar of N parameters for variadic input
- f1.cigar Cigar of N parameters for vectors
- f0.schwefel Schwefel of N parameters for variadic input
- f1.schwefel Schwefel of N parameters for vectors

### Changed

## EvoPER [0.3.0] - 2016-11-26
### Added
- Estimates class for returning results of extremize function
- OptionsACOR class for ACOr Options
- abm.acor Implementation of ACO for continuous domains
- abm.ees1 EvoPER Implementation of simple ES
- OptionsFactory Creates an instance of Options class
- naiveperiod Search for period in data
- gm.mean Calculate the geometric mean
- elog.level Wrapper (futile.logger) for getting/setting log level
- elog.error Wrapper (futile.logger) for logging error messages
- elog.info  Wrapper (futile.logger) for logging info messages
- elog.debug Wrapper (futile.logger) for logging debug messages
- acor.updateants ACO internal function
- acor.weigth ACO internal function
- acor.probabilities ACO internal function
- acor.lthgaussian ACO internal function
- acor.sigma ACO internal function
- acor.archive ACO internal function
- acor.S ACO internal function
- acor.F ACO internal function
- acor.W ACO internal function
- acor.N ACO internal function
- es.evaluate General ES function for evaluating a solution
- ees1.mating EES1 internal function
- ees1.mating1 EES1 internal function
- ees1.recombination EES1 internal function
- ees1.mutation EES1 internal function
- ees1.challenge EES1 internal function
- ees1.explore EES1 internal function
- ees1.selection EES1 internal function
- abm.ees2 EvoPER Implementation of simple ES
- partSolutionSpace Support function for implementing evolutionary strategies
- sortSolution Support function for implementing evolutionary strategies
- bestFitness Support function for implementing evolutionary strategies