@@ -79,7 +79,8 @@ export(lowerBound)
 export(naiveperiod)
 export(partSolutionSpace)
 export(predatorprey)
-export(predatorprey.plot)
+export(predatorprey.plot0)
+export(predatorprey.plot1)
 export(pso.Velocity)
 export(pso.best)
 export(pso.chi)
